--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,6 @@
 
 *= require Analytic-main
 *= require account
-*= require Manage-part
 *= require Dashboard
 *= require Dashboard-add
 *= require Entry
@@ -19,7 +18,6 @@
 *= require Analytics
 *= require EntryScss
 *= require story_sets
-*= require kpi_subscribes
 *= require report/reports
 *= require report/snap.css.scss
 *= require dataview/dataview_tiem
@@ -36,10 +34,13 @@
 *= require basic
 *= require log
 *= require welcome
-*= require entity_group
 *= require kpis/index
 *= require users/index
 *= require entities/index
+*= require departments/index
+*= require entity_groups/index
+*= require kpis/access
+*= require kpi_subscribes/new
 
 *= require_self
  */
