--- a/app/assets/stylesheets/manage/manage_no_aside.css.scss
+++ b/app/assets/stylesheets/manage/manage_no_aside.css.scss
@@ -1,14 +1,10 @@
 @import "../help.css.scss";
-.manage_three_column{
+.manage_no_aside{
   &:after{
     @include after-clear;
   }
-  &>.left{
-    @include box-sizing-border;
-    width:calc(100% - 260px);
-    float:left;
-    height:100%;
-    &>.header{
+
+     .header{
       height:49px;
       background-color:#5688A9;
       position:relative;
@@ -161,6 +157,7 @@
         float:left;
         overflow-y:auto;
         overflow-x:hidden;
+        background:#fff;
         .manage-btn-group{
           left: 33px;
           position: relative;
@@ -234,118 +231,7 @@
         }
       }
     }
-  }
-  &>.right{
-    @include box-border(260px);
-    background-color:#eff2f6;
-    height:100%;
-    border-left:1px solid #dcdcdc;
-    &>section{
-      padding-bottom:12px;
-      &:not(:first-of-type){
-        border-top:1px solid #dcdcdc;
-      };
-      &>h3{
-        font-family:'avenir';
-        color:#45acfb;
-        font-size:18px;
-        font-weight:lighter;
-        display:inline-block;
-      }
-      &.adaptable{
-        &>h3{
-          margin:20px 0 10px 7px;
-        }
-        &>i.icon-plus{
-          display:inline-block;
-          color:rgba(0,0,0,0.4);
-          font-size:10px;
-          pointer-events:auto;
-          cursor:pointer;
-          float:right;
-          margin-right:14px;
-          margin-top:24px;
-          transition:color 0.25s ease-out;
-        }
-        &>i.icon-plus{
-          &:hover{
-            color:black;
-          }
-          &:after{
-            content:'add';
-            font-size:12px;
-            padding-left:4px;
-          }
-        }
-        &>ul{
-          list-style-type:none;
-          margin:0px;
-          padding-left:0px;
-          li{
-            color:rgba(0,0,0,0.5);
-            cursor:pointer;
-            transition:background-color 0.25s ease-out;
-            position:relative;
-            &.active{
-              background-color:#e2e7ef;
-            }
-            &:hover{
-              background-color:#e2e7ef;
-            }
-            &:hover i.icon-remove{
-              display:inline-block;
-            }
-            &>a{
-              display:block;
-              height:100%;
-              width:219px;
-              padding:5px 8px;
-              text-overflow:ellipsis;
-              overflow:hidden;
-              white-space: nowrap;
-              font-size:13px;
-            }
-            &>i.icon-remove{
-              pointer-events:auto;
-              position:absolute;
-              right:9px;
-              top:7px;
-              font-size:13px;
-              color:rgba(0,0,0,0.5);
-              font-weight:lighter;
-              display:none;
-              &:hover{
-                color:black;
-                display:inline-block;
-              }
-            }
-          }
-        }
-      }
-      &.solid{
-         &>h3{
-           margin:15px 0 5px 7px;
-         }
-        &>p{
-          padding:0 7px 0 10px;
-          word-break:normal;
-          word-wrap: break-word;
-          color:rgba(0,0,0,0.5);
-          font-size:13px;
-          display:blcok;
-        }
-        &>a{
-          width:110px;
-          font-size:13px;
-          position:relative;
-          left:50%;
-          margin-left:-55px;
-          margin-top:10px;
-          margin-bottom:8px;
-        }
-      }
-    }
-  }
+
 }
 .sortable-dragging{
   opacity:0.9
@@ -411,13 +297,4 @@
 }
 .manage-sort-list li>table[special='my-kpi']{
   left:21px;
-}
-/********************************************************************************************************* 针对右边有导航的
-*******************************************************************************************************************/
-.manage-left-content{
-  background-color:white;
-  position:relative;
-}
-.manage-left-content[name='department']{
-  padding-top:0px;
 }
