--- a/app/views/kpi_categories/_left_readonly_menu.html.erb
+++ b/app/views/kpi_categories/_left_readonly_menu.html.erb
@@ -1,10 +1,13 @@
-<ul class="manage-left-menu" id="manage-left-menu" type="category" special="my-kpi">
-  <li>
-    <%= t 'manage.kpi.category' %>
-  </li>
-  <% @categories.each do |category| %>
-      <li class="<%= category.id==@active_category_id ? 'active' : '' %>" number="<%= category.id %>" title="<%= category.name %>">
-        <a category="<%= category.id %>"><%= category.name %></a>
-      </li>
-  <% end %>
-</ul>
+<div class="left">
+  <ul class="manage-left-menu" id="manage-left-menu" type="category" special="my-kpi">
+    <li>
+      <%= t 'manage.kpi.category' %>
+    </li>
+    <% @categories.each do |category| %>
+        <li class="<%= category.id==@active_category_id ? 'active' : '' %>" number="<%= category.id %>" title="<%= category.name %>">
+          <a category="<%= category.id %>"><%= category.name %></a>
+        </li>
+    <% end %>
+  </ul>
+</div>
+
