--- a/app/assets/stylesheets/kpi_entries/index.css.scss
+++ b/app/assets/stylesheets/kpi_entries/index.css.scss
@@ -1,4 +1,5 @@
 @import "help.css.scss";
+@import "../libs/datetimepicker.css";
 /********************************************************************************************************* 分类系列
 *******************************************************************************************************************/
 .entry-left-menu{
@@ -362,4 +363,22 @@
       }
     }
   }
+}
+.text {
+  line-height: 22px;
+  padding: 0 6px;
+  color: #666;
+}
+
+.box h1 {
+  padding-left: 10px;
+  height: 22px;
+  line-height: 22px;
+  background: #f1f1f1;
+  font-weight: bold;
+}
+
+.box {
+  position: relative;
+  border: 1px solid #e7e7e7;
 }
