--- a/app/assets/stylesheets/kpi_entries/index.css.scss
+++ b/app/assets/stylesheets/kpi_entries/index.css.scss
@@ -70,6 +70,7 @@
   bottom:0px;
   right:0px;
   overflow-x:hidden;
+  background:#fff;
   overflow-y:auto;
 }
 /******************************************************************** 输入
