--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-
+<%=stylesheet_link_tag "welcome" %>
 <section class="index-welcome">
   <!--<div class="left-image"></div>-->
   <div class="right-info">
