--- a/app/views/layouts/non_authorized.html.erb
+++ b/app/views/layouts/non_authorized.html.erb
@@ -3,6 +3,7 @@
      <head>
           <title>ClearInsight</title>
           <%= stylesheet_link_tag    "application", :media => "all" %>
+          <%=stylesheet_link_tag "log" %>
           <%= requirejs_include_tag "application" %>
           <%= csrf_meta_tags %>
      </head>
