--- a/app/assets/stylesheets/kpi_entries/index.css.scss
+++ b/app/assets/stylesheets/kpi_entries/index.css.scss
@@ -1,5 +1,6 @@
 @import "help.css.scss";
 @import "../libs/datetimepicker.css";
+@import "../libs/datepicker.css";
 /********************************************************************************************************* 分类系列
 *******************************************************************************************************************/
 .entry-left-menu{
