--- a/app/assets/stylesheets/kpis/access.css.scss
+++ b/app/assets/stylesheets/kpis/access.css.scss
@@ -1,4 +1,5 @@
 @import "../manage/manage_no_aside.css.scss";
+@import "../kpis/index.css.scss";
 .manage_no_aside{
   .manage-left-content{
     &>.left{
