--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "kpi_entries/index" %>
 <ul class="entry-left-menu" id="entry-left-menu">
      <li>
           <%= t 'entry.desc.entry'%>
