--- a/app/views/kpi_subscribes/new.html.erb
+++ b/app/views/kpi_subscribes/new.html.erb
@@ -1,3 +1,5 @@
+
+<%=stylesheet_link_tag "kpi_subscribes/new" %>
 <div class="story-set-new kpi-subscribes-new">
   <p><%= t 'subscription.add'%></p>
   <div class="divide"></div>
@@ -22,10 +24,6 @@
       <option value="0"><%= t 'subscription.add-sub.average'%></option>
       <option value="1"><%= t 'subscription.add-sub.total'%></option>
     </select>
-
-
-
-
 
     <p><%= t 'subscription.add-sub.alert_type'%></p>
     <div class="extreme">
