--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "users/setting" %>
 <div class="account-block">
   <input id="old-pwd" type="text" placeholder="<%= I18n.t "auth.view.old_pwd"%>"/>
   <input id="new-pwd" type="password" placeholder="<%= I18n.t "auth.view.new_pwd"%>"/>
