--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -4,6 +4,8 @@
 @import "main_part/date_picker.css.scss";
 @import "main_part/message.css.scss";
 @import "libs/font-awesome.css";
+@import "libs/aero";
+@import "libs/chosen";
 @font-face {
   font-family:"open-sans";
   src: url("/assets/OpenSans-Regular.eot");
