--- a/app/assets/stylesheets/entities/index.css.scss
+++ b/app/assets/stylesheets/entities/index.css.scss
@@ -1,5 +1,7 @@
+@import "../manage/manage_three_column.css.scss";
 @import "../manage/manage_two_column.css.scss";
 @import "./edit.css.scss";
+@import "../users/index.css.scss";
 .content-right-nav-add-block[name="department"]{
   top:145px;
 }
