--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,4 +1,4 @@
-
+<%=stylesheet_link_tag "departments/index" %>
 <div class="part-left" id="part-info">
   <section class="title">
     <div class="inner">
