--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "entities/index" %>
 <section class="manage_two_column" id="manage_two_column">
   <div class="left">
     <div class="header" id="left-content-title">
