--- a/app/views/kpi_subscribes/mine.html.erb
+++ b/app/views/kpi_subscribes/mine.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "kpi_subscribes/mine" %>
 <section class="manage_no_aside_no_menu" id="manage_no_aside_no_menu">
   <div class="content-left-main" name="category" id="content-left-main">
     <div class="header" id="left-content-title">
