--- a/app/views/kpis/access.html.erb
+++ b/app/views/kpis/access.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "kpis/access" %>
 <section class="manage_no_aside" id="manage_no_aside">
   <div class="content-left-main" name="category" id="content-left-main">
     <div class="header" id="left-content-title">
