--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "users/index" %>
 <section class="manage_three_column" id="manage_three_column">
   <div class="left">
     <div class="header" id="left-content-title">
