story item style and layout

--- a/app/views/story_sets/index.html.erb
+++ b/app/views/story_sets/index.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "story_sets/index" %>
 <div class="story-set-index">
   <div class="left-part">
     <div class="area">
@@ -10,12 +11,8 @@
       <div class="projects">
         <% @story_sets.each do |story_set| %>
             <a class="item" href="<%= story_story_set_path(story_set) %>">
-              <div class="left">
-                <p title="<%= story_set.title %>"><%= story_set.title %></p>
-
-                <p title="<%= story_set.description %>"><%= story_set.description %></p>
-              </div>
-              <div class="right"></div>
+              <p title="<%= story_set.title %>"><%= story_set.title %></p>
+              <p title="<%= story_set.description %>"><%= story_set.description %></p>
             </a>
         <% end %>
       </div>
@@ -36,18 +33,4 @@
     </div>
   </div>
 </div>
-<script>
- $(document).ready(function(){
-      var $targets=$("#latest-notice .item");
-     for(var i=0;i<$targets.length;i++){
-         var $target=$targets.eq(i),
-             content=$target.attr("content");
-         var name=content.split(",")[0];
-         var word=content.split(",")[1].split(":")[0];
-         var mark=content.split(",")[1].split(":")[1];
-         $target.find(".name").text(name+" :");
-         $target.find(".word").html("<span>"+word+"</span><span class='mark'>"+mark+"</span>");
-     }
- })
-</script>
 
