--- a/app/views/reports/demo.html.erb
+++ b/app/views/reports/demo.html.erb
@@ -1,5 +1,5 @@
 <% content_for :javascript_includes do %>
-    <%= javascript_include_tag "dhtmlx" %>
+    <%= javascript_include_tag "deleted/dhtmlx" %>
 <% end %>
 
 <div>
