--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -62,8 +62,8 @@
     <%= javascript_include_tag "reports/report_center" %>
     <%= javascript_include_tag "reports/snap" %>
     <%= javascript_include_tag "func-module/chosen"%>
-    <%= javascript_include_tag "dhtmlx"%>
-    <%= javascript_include_tag "dhtmlx-extend"%>
+    <%= javascript_include_tag "deleted/dhtmlx"%>
+    <%= javascript_include_tag "deleted/dhtmlx-extend"%>
     <%= javascript_include_tag "reports/report_menu"%>
     <%= javascript_include_tag "reports/rand"%>
     <%= javascript_include_tag "reports/data-current-status" %>
