--- a/app/assets/stylesheets/reports/index.css.scss
+++ b/app/assets/stylesheets/reports/index.css.scss
@@ -9,13 +9,13 @@ $list-width:220px;
   @include box-sizing-border;
   float:left;
   width:$list-width;
-  min-height: $main-height;
   height:calc( 100% - 70px );
   position:relative;
   section{
     background:lighten($nav-dark,4%);
     @include box-shadow-inset(-3px,0px,8px,rgba(0,0,0,0.1));
     height:100%;
+    position:relative;
     &>.header{
       width:100%;
       height:50px;
@@ -75,31 +75,99 @@ $list-width:220px;
         }
       }
     }
-    &>a.btn{
-      $width:150px;
+    &>.footer{
       position:absolute;
-      font-size:13px;
-      width:$width;
-      padding:7px 0px;
-      left:50%;
-      margin-left:- $width / 2 ;
-      &.share{
-        bottom:120px;
-      }
-      &.snap{
-        bottom:80px;
-      }
-      &.subscribe{
-        bottom:24px;
-        color:#fff;
-        $bg_color:lighten($nav-dark,11%);
-        background:$bg_color;
-        background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.6) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
-        background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.6) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
+      bottom:21px;
+      left:0px;
+      right:0px;
+      padding-top:9px;
+      border-top:1px solid lighten($nav-dark,10%);
+      a{
+        position:relative;
+        font-size:21px;
+        bottom:0px;
+        @include transition(bottom);
+        cursor:pointer;
+        color:rgba(255,255,255,0.5);
+        display: inline-block;
+        text-align:center;
+        &:hover{
+          bottom:8px;
+          color:#fff;
+        }
+        @mixin after_content($content){
+          content:$content;
+          position:absolute;
+          top:24px;
+          left:0px;
+          right:0px;
+          text-align:center;
+          font-size:9px;
+        };
+        &.share{
+           float:right;
+          right:25px;
+          width:36px;
+          &:after{
+            @include after_content("DISCUSS");
+          }
+        }
+        &.snap{
+           float:right;
+          right:15px;
+          width:36px;
+          &:after{
+            @include after_content("SNAP");
+          }
+        }
+        &.subscribe{
+           float:left;
+           left:10px;
+          width:50px;
+          &:after{
+            @include after_content("SUBSCRIBE");
+          }
+        }
       }
     }
   }
 }
+.snap_block{
+  position:fixed;
+  z-index:9999;
+  height:120px;
+  width:240px;
+  background:#fff;
+  padding:8px;
+  left:-999em;
+  @include box-shadow(3px,3px,4px,rgba(0,0,0,0.9));
+  @include border-radius-same(4px);
+  border:1px solid rgba(0,0,0,0.4);
+  .icon-remove{
+    color:$red;
+    pointer-events:auto;
+    cursor:pointer;
+    font-size:16px;
+    float:right;
+    &:hover{
+      color:$red-hover;
+    }
+  }
+  p{
+    clear:both;
+    text-align: left;
+    padding-left:3px;
+    font-size:13px;
+    color:#666;
+    margin-bottom:1px;
+  }
+  .btn{
+    font-size:13px;
+    padding:7px 14px;
+    margin-top:9px;
+  }
+}
+
 // #right part
 .report-content{
   @include box-sizing-border;
@@ -177,86 +245,7 @@ $list-width:220px;
     }
   }
 }
-.pageload-overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 00px;
-  left:0px;
-  visibility: hidden;
-  z-index:899;
-}
 
-.pageload-overlay.show {
-  visibility: visible;
-}
-
-.pageload-overlay svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.pageload-overlay svg path {
-  fill: #fff;
-}
-.pageload-overlay::after,
-.pageload-overlay::before {
-  content: '';
-  position: fixed;
-  width: 20px;
-  height: 20px;
-  top: 55%;
-  left: 60%;
-  margin: -10px 0 0 -10px;
-  border-radius: 50%;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 900;
-  -webkit-transition: opacity 0.15s, visibility 0s 0.15s;
-  transition: opacity 0.15s, visibility 0s 0.15s;
-}
-
-.pageload-overlay::after {
-  //  background: #6cc88a;
-  background:$blue;
-  -webkit-transform: translateX(-20px);
-  transform: translateX(-20px);
-  -webkit-animation: moveRight 0.6s linear infinite alternate;
-  animation: moveRight 0.6s linear infinite alternate;
-}
-
-.pageload-overlay::before {
-  //  background: #4fc3f7;
-  background: $red;
-  -webkit-transform: translateX(20px);
-  transform: translateX(20px);
-  -webkit-animation: moveLeft 0.6s linear infinite alternate;
-  animation: moveLeft 0.6s linear infinite alternate;
-}
-@-webkit-keyframes moveRight {
-  to { -webkit-transform: translateX(20px); }
-}
-
-@keyframes moveRight {
-  to { transform: translateX(20px); }
-}
-
-@-webkit-keyframes moveLeft {
-  to { -webkit-transform: translateX(-20px); }
-}
-
-@keyframes moveLeft {
-  to { transform: translateX(-20px); }
-}
-
-.pageload-loading.pageload-overlay::after,
-.pageload-loading.pageload-overlay::before {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s;
-}
 //set the table background
 div.gridbox.gridbox_dhx_skyblue{
   .objbox{
