--- a/app/assets/stylesheets/reports/index.css.scss
+++ b/app/assets/stylesheets/reports/index.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "../help.css.scss";
+@import "../libs/jquery.mCustomScrollbar.min.css";
 // #left part
 $main-height:600px - 70px;
 $list-width:220px;
@@ -29,7 +30,9 @@ $list-width:220px;
     }
     &>ul{
       $li-padding:10px;
-      &>p{
+      height:calc(100% - 109px);
+      overflow-y:auto;
+      p{
         color:lighten($nav-dark,25%);
         font-size:13px;
         padding-left:$li-padding;
@@ -77,10 +80,11 @@ $list-width:220px;
     }
     &>.footer{
       position:absolute;
-      bottom:21px;
+      bottom:0;
       left:0px;
       right:0px;
-      padding-top:9px;
+      height:40px;
+      padding:6px 0;
       border-top:1px solid lighten($nav-dark,10%);
       a{
         position:relative;
@@ -167,6 +171,12 @@ $list-width:220px;
     margin-top:9px;
   }
 }
+.mCSB_3_scrollTools{
+  background:yellow;
+}
+
+
+
 
 // #right part
 .report-content{
