--- a/app/assets/stylesheets/deleted/current_status.css.scss
+++ b/app/assets/stylesheets/deleted/current_status.css.scss
@@ -1,9 +1,9 @@
-@import "../help.css.scss";
-.current-status{
-  .header{
-    background:rgba(255,255,255,0.3);
-  }
-}
+@import "help.css.scss";
+//.current-status{
+//  .header{
+//    background:rgba(255,255,255,0.3);
+//  }
+//}
 .current-status-pageload-overlay {
   position: fixed;
   width: 100%;
