--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,7 @@
 <%=stylesheet_link_tag "reports/index" %>
 <%= render "my-reports" %>
 <div class="report-content" id="report-content">
+  <%= render "template1" %>
 </div>
+<%= render "preloader" %>
 
