--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -24,12 +24,12 @@
 
 
 
-<!--<section class="snap_block" id="snap_block">-->
-  <!--<i class="icon icon-remove" id="snap-shot-remove"></i>-->
-  <!--<p>Snap description</p>-->
-  <!--<input type="text" id="snap-shot-desc"/>-->
-  <!--<a class="btn btn-success" id="snap-shot-btn">finish</a>-->
-<!--</section>-->
+<section class="snap_block" id="snap_block">
+  <i class="icon icon-remove" id="snap-shot-remove"></i>
+  <p>Snap description</p>
+  <input type="text" id="snap-shot-desc"/>
+  <a class="btn btn-success" id="snap-shot-btn">finish</a>
+</section>
 
 <!--<section class="back-pop report_center_back_pop" id='back-pop'>-->
   <!--<div class="choose-project-team">-->
