--- a/app/views/reports/_subscription.html.erb
+++ b/app/views/reports/_subscription.html.erb
@@ -1,3 +1,4 @@
+<%=stylesheet_link_tag "reports/subscription" %>
 <section class="report-subscription">
   <div class="header" id="report-subscription-header">
       <p>App subscription center</p>
