--- a/app/views/reports/_template1.html.erb
+++ b/app/views/reports/_template1.html.erb
@@ -1,9 +1,9 @@
 <%=stylesheet_link_tag "reports/template1" %>
 <div class="template1">
-  <section class="conditionr">
+  <section class="condition" id="condition">
       <p>Condition</p>
   </section>
-  <section class="content">
+  <section class="content" id="data_container">
 
   </section>
   <section class="snaps" id="snap-groups">
