--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,5 +1,5 @@
 <%=stylesheet_link_tag "reports/current_status" %>
-<div class="template1">
+<div class="template1" id="current-status-normal">
   <section class="condition"  id="condition">
     <p>Condition</p>
     <div class="header-block">
@@ -33,8 +33,8 @@
     </div>
   </section>
   <section class="content" id="data_container">
-
   </section>
+
   <section class="snaps" id="snap-groups">
     <% @snaps.each do |snap| %>
         <div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
