--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -47,27 +47,27 @@
 
 <section id="current-status-target" class='current-status-wrapper'>
   <div class="wrapper-header" id="target-wrapper-header">
-    <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+    <a class="back-btn current-status-target-back-btn"><i class="icon icon-angle-left"></i> FTQ</a>
     <p>Target setting</p>
   </div>
-  <div id="target-setting-footer" class="target-setting-footer">
-    <div class="footer-left">
-      <p>Condition</p>
-      <p>When Target higher than current FTQ</p>
-      <p>When Target equal to current FTQ</p>
-      <p>When Target lower than current FTQ</p>
+  <div id="target_setting" class="wrapper-current-body target"></div>
+  <div class="wrap-current-footer">
+    <p><i class="icon icon-cog"></i> setting</p>
+    <div class="item-block">
+      <p><span class="grey">when</span> Target > Current FTQ</p>
     </div>
-    <div class="footer-right" id="footer-right">
-      <p>Color</p>
-      <label>FTQ color setting</label>
+    <div class="item-block">
+      <p><span class="grey">when</span> Target = Current FTQ</p>
+    </div>
+    <div class="item-block">
+      <p><span class="grey">when</span> Target < Current FTQ</p>
     </div>
   </div>
-  <div id="target_setting" class="wrapper-current-body"></div>
 </section>
 
 <section id="current-status-all-defects" class='current-status-wrapper'>
   <div class="wrapper-header">
-    <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+    <a class="back-btn current-status-target-back-btn"><i class="icon icon-angle-left"></i> FTQ</a>
     <p>All defects</p>
   </div>
   <div class="wrapper-current-body">
@@ -77,7 +77,7 @@
 
 <section id="current-status-key-defects" class='current-status-wrapper'>
   <div class="wrapper-header">
-    <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+    <a class="back-btn current-status-target-back-btn"><i class="icon icon-angle-left"></i> FTQ</a>
     <p>Key station defects</p>
   </div>
   <div class="wrapper-current-body">
