--- a/app/assets/stylesheets/reports/current_status.css.scss
+++ b/app/assets/stylesheets/reports/current_status.css.scss
@@ -136,30 +136,29 @@
 }
 .current-status-wrapper{
   display:none;
+  height:100%;
   .wrapper-header{
     width:100%;
     height:69px;
-    background:lighten(#fbe8af,9%);
     border-bottom:1px solid rgba(0,0,0,0.2);
     position:relative;
-    .back-btn{
-      background:url(/assets/report-back-btn.png)no-repeat 6px center;
-      //background-size:contain;
-      cursor:pointer;
-      width:190px;
-      height:40px;
-      @include border-radius(0px,15px,15px,0);
-      display: inline-block;
-      margin:10px 0 0 10px;
-      padding:10px 0 0 10px;
-      span{
-        display:block;
-        color:#fff;
-        font-size:12px;
-        padding:8px 0 0 33px;
+    .current-status-target-back-btn{
+      i{
+        font-size:45px;
+        position:relative;
+        top:5px;
+        margin-right:7px;
       }
-      &:hover span{
-        color:rgba(0,0,0,1);
+      font-size:25px;
+      font-weight:lighter;
+      color:$blue;
+      cursor:pointer;
+      position:relative;
+      top:5px;
+      left:15px;
+      @include transition(color);
+      &:hover{
+         color:$golden-text;
       }
     }
     &>p{
@@ -169,85 +168,41 @@
       right:15px;
       left:0px;
       font-size:23px;
-      color:#888;
+      color:#9d9d9d;
       pointer-events:none;
     }
   }
   .wrapper-current-body{
     border-width:0px !important;
     background:#fff;
-  }
-  .target-setting-footer{
-    height:110px;
-    background:#fff;
-    border-top:1px solid rgba(0,0,0,0.2);
-    $padding-left:14px;
-    .footer-left{
-      float:left;
-      @include box-sizing-border;
-      width:330px;
-      margin-top:1px;
-      padding-right:10px;
-      border-right:1px solid rgba(0,0,0,0.2);
-      &>p{
-        &:first-of-type{
-          color:#888;
-          font-size:14px;
-          padding-top:9px;
-          padding-left:$padding-left;
-          margin:0px;
-        }
-        color:#666;
-        text-align:right;
-        padding-left:$padding-left;
-        margin-bottom:4px;
-        font-size:17px;
-      }
+    height:calc(100% - 71px);
+    &.target{
+      height:calc(100% - 142px);
     }
-    .footer-right{
-      position:relative;
-      float:left;
-      width:calc(100% - 330px);
-      @include box-sizing-border;
-      &>p{
-        &:first-of-type{
+  }
+  .wrap-current-footer{
+    height:70px;
+    border-top:1px solid rgba(0,0,0,0.2);
+    &>p{
+      margin:5px 0px 3px 0;
+      padding-left:15px;
+      font-size:15px;
+      color:#9d9d9d;
+    }
+    .item-block{
+      @include box-border(33%);
+      p{
+        text-align:left;
+        margin-left:15px;
+        width:60%;
+        padding:3px 5px;
+        @include border-radius-same(3px);
+        border:1px solid rgba(0,0,0,0.2);
+        color:#222;
+        display:inline-block;
+        .grey{
           color:#888;
-          font-size:14px;
-          padding-top:9px;
-          padding-left:$padding-left+8;
-          margin:0px;
         }
-      }
-      .color-group{
-        display:block;
-        margin-top:11px;
-        margin-left:$padding-left+8;
-        &:first-of-type{
-          margin-top:3px;
-        }
-        &:after{
-          @include after-clear;
-        }
-        .color-item{
-          $width:15px;
-          float:left;
-          display:inline-block;
-          margin-right:5px;
-          width:$width;
-          height:$width;
-          cursor:pointer;
-          border:1px solid #fff;
-          &.active{
-            border:1px solid #555;
-          }
-        }
-      }
-      &>label{
-        position:absolute;
-        color:rgba(0,0,0,0.2);
-        right:14px;
-        bottom:3px;
-        font-size:25px;
       }
     }
   }
